<resources>
    <string name="app_name" translatable="false">PlanYourTrip</string>
    <string name="buttonQuiz">Quiz</string>
    <string name="textView1">PLAN MY TRIP</string>
    <string name="textView2">Start the quiz :</string>
    <string name="pictureDesc">Trip picture</string>
    <string name="logoAppli">Application logo</string>
    <string name="buttonQuit">X Quit</string>
    <string name="consignes">Please answer the following questions. All questions with * are required.</string>
    <string name="profilVoyageur">Traveler profile</string>
    <string name="Q1_Voyageur">You travel : *</string>
    <string name="Q2_Voyageur">How many travelers will you be in total ? *</string>
    <string name="Q3_Voyageur">Will there be minors ? *</string>
    <string name="Q4_Voyageur">"What type of minor is this ? "</string>
    <string name="Q5_Voyageur">Are all travelers vaccinated against COVID-19 ? *</string>
    <string name="avionDesc">A plane</string>
    <string name="Seul">Alone</string>
    <string name="en_famille">With family</string>
    <string name="en_couple">As a couple</string>
    <string name="entre_amis">With friends</string>
    <string name="nb_voyageurs">Number of travelers</string>
    <string name="yes_mineur">Yes</string>
    <string name="no_mineur">No</string>
    <string name="Bas_âge">Young age</string>
    <string name="Enfant">Child</string>
    <string name="Adolescent">Teenager</string>
    <string name="switchCovid">No</string>
    <string name="YesCovid">Yes</string>
    <string name="caracteristique">Trip features</string>
    <string name="etoileDesc">a star</string>
    <string name="Q1_Cara">What season do you want to go ? *</string>
    <string name="printemps">Spring</string>
    <string name="ete">Summer</string>
    <string name="hiver">Winter</string>
    <string name="automne">Autumn</string>
    <string name="Q2_Cara">How long do you want to leave ? *</string>
    <string name="nbJours">Number of days</string>
    <string name="jours">Days</string>
    <string name="Q3_Cara">Which region of the world are you interested in ? *</string>
    <string name="Q4_Cara">How do you characterize your budget per person ? *</string>
    <string name="Q5_Cara">What language(s) do you speak ? *</string>
    <string name="economique">Economy</string>
    <string name="luxe">Luxury</string>
    <string name="modere">Moderate</string>
    <string name="preferences">Your preferences</string>
    <string name="coeurDesc">a heart</string>
    <string name="Q1_Pref">What type of travel are you interested in ? *</string>
    <string name="Q2_Pref">What activities interest you ? *</string>
    <string name="Q3_Pref">You consider yourself as : *</string>
    <string name="Q4_Pref">What type of accomodation do you want ? *</string>
    <string name="Q5_Pref">Do you have any dietary restriction ? *</string>
    <string name="vege">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pasRestriction">No restriction</string>
    <string name="hotel">Hotel</string>
    <string name="camping">Camping</string>
    <string name="pasPref">No preferences</string>
    <string name="auberge">Youth Hostel</string>
    <string name="plage">Beach</string>
    <string name="rando">Hike</string>
    <string name="musée">Museum</string>
    <string name="aventure">Adventure</string>
    <string name="detente">Relaxation</string>
    <string name="culturel">Cultural</string>
    <string name="culinaire">Culinary</string>
    <string name="valeur">Value</string>
    <string name="resultats">Your results</string>
    <string name="consignes5">Here are travel suggestions according to your preferences</string>
    <string name="français">French</string>
    <string name="anglais">English</string>
    <string name="espagnol">Spanish</string>
    <string name="portugais">Portuguese</string>
    <string name="russe">Russian</string>
    <string name="chinois">Chinese</string>
    <string name="arabe">Arabic</string>
    <string name="italien">Italian</string>
    <string name="allemand">German</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="proposition1">Proposition 1</string>
    <string name="proposition2">Proposition 2</string>
    <string name="proposition3">Proposition 3</string>
</resources>